# bettercd

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
backend/: pyproject.toml
backend/apps/base_app/: admin.py  pagination.py  storage.py
backend/apps/base_app/managers/: __init__.py  user.py
backend/apps/base_app/migrations/: 0001_initial.py
backend/apps/base_app/models/: user.py
backend/apps/base_app/serializers/: __init__.py
backend/apps/base_app/tests/: test_sample.py
backend/apps/base_app/views/: __init__.py  login.py
backend/apps/docker_app/: apps.py  urls.py
backend/apps/docker_app/serializers/: __init__.py  runs.py
backend/apps/docker_app/services/: __init__.py  google_job_client.py  google_log_client.py  google_subscriber_client.py
backend/apps/docker_app/utils/: __init__.py  google_credentials.py
backend/apps/docker_app/views/: __init__.py  runs.py
backend/apps/integrations_app/: admin.py  apps.py  urls.py
backend/apps/integrations_app/migrations/: 0001_initial.py  0002_alter_githubprofile_user.py  0003_githubprofile_installation_id_and_more.py
backend/apps/integrations_app/models/: __init__.py  github.py
backend/apps/integrations_app/serializers/: __init__.py  github.py
backend/apps/integrations_app/services/: __init__.py  github.py
backend/apps/integrations_app/views/: __init__.py  github.py
backend/apps/pipeline_app/: admin.py  apps.py  permissions.py  urls.py
backend/apps/pipeline_app/migrations/: 0001_initial.py  0002_stage.py  0003_stage_script.py  0004_alter_stage_script.py  0005_stage_description.py  0006_environmentvariable.py  0007_remove_stage_stage_type.py  0008_alter_stage_order.py  0009_stage_node_type.py  0010_alter_stage_name.py  0011_alter_stage_node_type.py  0012_alter_stage_node_type.py  0013_stage_params.py
backend/apps/pipeline_app/models/: __init__.py  pipeline.py  stage.py  (+1 more)
backend/base-image/: Dockerfile  entrypoint.sh
backend/project/: .env.example  celery.py  settings.py  urls.py
(+98 files in other folders)
