[project]
name = "bettercd"
version = "0.1.0"
description = "No-Code graphical CI/CD pipeline builder"
readme = "README.md"
requires-python = ">=3.12"
authors = ["72mins"]
dependencies = [
    "boto3>=1.36.21",
    "celery>=5.4.0",
    "cryptography>=44.0.2",
    "django>=5.1.6",
    "django-celery-results>=2.5.1",
    "django-cors-headers>=4.7.0",
    "django-crum>=0.7.9",
    "django-env-validator>=1.0.1",
    "django-filter>=24.3",
    "django-redis>=5.4.0",
    "django-storages>=1.14.5",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.4.0",
    "drf-spectacular>=0.28.0",
    "google-cloud-logging>=3.11.4",
    "google-cloud-pubsub>=2.28.0",
    "google-cloud-run>=0.10.15",
    "psycopg2-binary>=2.9.10",
    "pynvim>=0.5.2",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.6",
]
